# cs918-lab

./: .gitignore  README.md  pyproject.toml  remote_jupyter_setup.sh  start_remote_jupyter.sh
examples/: NLTK.ipynb  TextFileIO.ipynb  regex.ipynb
lab1/: part_a.py  part_b.py  part_c.py
lab2/: README.md  cs918_assignment_2.ipynb  playground.py  requirements.txt
lab2/utils/: file.py
utils/: files.py
