[tool.poetry]
name = "cs918-lab"
version = "0.1.0"
description = ""
authors = ["Xanonymous <trusaidlin@gmail.com>"]
readme = "README.md"
packages = [
    {include = "utils"}
]

[tool.poetry.dependencies]
python = ">=3.12 <3.13"
pandas = "^2.2.0"
nltk = "^3.8.1"
pyarrow = "^15.0.0"
tiktoken = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
