[tool.poetry]
name = "cs918-lab"
version = "0.1.0"
description = ""
authors = ["Xanonymous <trusaidlin@gmail.com>"]
readme = "README.md"
packages = [
    {include = "utils"}
]

[tool.poetry.dependencies]
python = ">=3.12 <3.13"
pandas = "^2.2.1"
nltk = "^3.8.1"
pyarrow = "^15.0.0"
tiktoken = "^0.6.0"
transformers = "^4.38.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
pickleshare = "^0.7.5"
torch = "^2.2.1"
torchvision = "^0.17.1"
spacy = {extras = ["cuda12x"], version = "^3.7.4"}
emoji = "^2.10.1"
regex = "^2023.12.25"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.8"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
